samples/_failures_safe/1761128229_3085c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f648517.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
